syntax = "proto3";

option csharp_namespace = "FmsProtos.Grpc";

service OrganizationService {
  rpc GetOrganizationIds (GetOrganizationIdsRequest) returns (GetOrganizationIdsResponse);
}

message GetOrganizationIdsRequest {
  int32 organizationId = 1;
}

message GetOrganizationIdsResponse {
  repeated int32 organizationIds = 1;
}
